--- a/openidl-ui/src/app/create-datacall/create-datacall.component.html
+++ b/openidl-ui/src/app/create-datacall/create-datacall.component.html
@@ -1,8 +1,11 @@
 <app-header [selected]="selected" [fieldChanged]="hasFieldChanged"></app-header>
 <div class="container">
-	<h1 class="header-with-icon">
+	<h1 class="header-with-icon" *ngIf="!isClone">
 		<mat-icon color="primary">add_box</mat-icon>
-		<span *ngIf="!isClone">Create Data Call</span>
+		<span>Create Data Call</span>
+	</h1>
+	<h1 class="header-with-icon" *ngIf="isClone">
+		<mat-icon color="primary">content_copy</mat-icon>
 		<span *ngIf="isClone">Clone Data Call</span>
 	</h1>
 	<app-form
