#9 Issued Data Call wip

--- a/openidl-common-ui/src/app/components/report-table/report-table.component.html
+++ b/openidl-common-ui/src/app/components/report-table/report-table.component.html
@@ -1,75 +1,179 @@
-<div *ngIf='!isSpinner' class="col-sm-12 report-table">
-    <table class="table table-bordered table-hover">
-        <thead>
-            <tr>
-                <th *ngIf='role === "regulator"' style='width:5%'></th>
-                <th style='text-align: right;width:5%;padding-right:30px;'>Version</th>
-                <th style='width:30%'>Date and Time</th>
-                <th style='width:10%'>Status</th>
-                <th style='width:30%' *ngIf='isShowUrl'>Report URL</th>
-                <th style='width:18%'>Report Hash</th>
-                <th style='width:2%'></th>
-            </tr>
-        </thead>
-        <tbody *ngIf='reportList && reportList.length>0'>
-            <tr *ngFor="let report of reportList; let i = index">
-                <td *ngIf='(role === "regulator")&&(isJurisdiction)' style='width:5%'>
-                    <input *ngIf='(
-                    (!isAccepted && !isPublished && (report.status).toLowerCase()==="candidate") ||
-                    (isAccepted && (report.status).toLowerCase()==="accepted")
-                  )' type="radio" name='report' [value]="report" [checked]='(isAccepted && (report.status).toLowerCase()==="accepted") || isReportSelected' (change)='getSelectedReport(report)'></td>
-                <td style='text-align: right;padding-right:30px;width:5%;'>{{report.reportVersion}}</td>
-                <td style='width:30%'>{{report.updatedTs}}</td>
-                <td style='text-transform:capitalize;width:10%;'>{{report.status}}</td>
-                <td *ngIf='isShowUrl' class="report-link" style='width:30%;'>
-                    <span style='display:block;position:relative;'>
-                    <a *ngIf='(
-                            (this.role).toLowerCase() === "regulator") ||
-                            ((this.role).toLowerCase() === "statagent") ||
-                            !((this.role).toLowerCase() === "carrier" &&
-                              (report.status.toLowerCase() === "accepted" || report.status.toLowerCase() === "candidate"))'
-                            class='truncate-url' href='javascript:void(0);' (click)='openURL(report.url)' [tooltip]='report.url'>{{report.url}}</a>
-                  </span>
-                    <!-- <i class='glyphicon glyphicon-copy'></i> -->
-                </td>
-                <td style='width:18%;'>
-                    <span style='display:block;position:relative;'>
-                    <span class='truncate-hash' [tooltip]='report.hash'>{{report.hash}}</span>
-                    </span>
-                </td>
-                <td style='width:2%'>
-                    <div id='i' class='glyphicon glyphicon-option-vertical reset-btn' (click)='toggleCopyBtn(i)'>
-                        <div *ngIf='isCopyBtn && copyIndex === i' class='reset-container'>
-                            <div class="copyLink">
-                                <button *ngIf='!isHashCopied' ngxClipboard [cbContent]="report.hash" (click)='copyToClipboard("Copied","hash", $event)'>
-                                  {{copyHashText}}
-                              </button>
-                                <span *ngIf='isHashCopied'><i class='glyphicon glyphicon-ok-circle' style='margin-right:8px'></i>{{copyHashText}}</span>
-                            </div>
-                            <div class="copyLink">
-                                <button *ngIf='!isURLCopied' ngxClipboard [cbContent]="report.url" (click)='copyToClipboard("Copied", "URL", $event)'>
-                                  {{copyURLText}}
-                              </button>
-                                <span *ngIf='isURLCopied'><i class='glyphicon glyphicon-ok-circle' style='margin-right:8px'></i>{{copyURLText}}</span>
-                            </div>
-                        </div>
-                    </div>
-                </td>
-            </tr>
-        </tbody>
-        <tbody *ngIf='!(reportList && reportList.length>0)'>
-            <tr>
-                <td colspan='6' style='text-align:center; font-weight: bold;'>
-                    No reports available.
-                </td>
-            </tr>
-        </tbody>
-    </table>
-    <div *ngIf='(role === "regulator")&&(isJurisdiction)' class="col-sm-12 no-row-padding">
-        <button *ngIf='!isAccepted && !isPublished' class='btn-primary pull-right' type="button" (click)='submitReport("acceptAndPublishReport")' style='padding:12px 20px;' [disabled]='isDisabled'>Accept and Publish</button>
-        <button *ngIf='isAccepted' class='btn-primary pull-right' type="button" (click)='submitReport("publishReport")' style='text-transform: capitalize;padding:12px 20px;' [disabled]='!isAccepted'>Publish</button>
-        <button *ngIf='!isAccepted && !isPublished' class='btn-secondary pull-right' (click)='submitReport("acceptReport")' style='text-transform: capitalize;padding:12px 20px;' [disabled]='isDisabled'>Accept</button>
-    </div>
+<div *ngIf="!isSpinner" class="report-table">
+	<table class="table table-bordered table-hover">
+		<thead>
+			<tr>
+				<th *ngIf="role === 'regulator'" style="width: 5%"></th>
+				<th style="text-align: right; width: 5%; padding-right: 30px">
+					Version
+				</th>
+				<th style="width: 30%">Date and Time</th>
+				<th style="width: 10%">Status</th>
+				<th style="width: 30%" *ngIf="isShowUrl">Report URL</th>
+				<th style="width: 18%">Report Hash</th>
+				<th style="width: 2%"></th>
+			</tr>
+		</thead>
+		<tbody *ngIf="reportList && reportList.length > 0">
+			<tr *ngFor="let report of reportList; let i = index">
+				<td
+					*ngIf="role === 'regulator' && isJurisdiction"
+					style="width: 5%"
+				>
+					<input
+						*ngIf="
+							(!isAccepted &&
+								!isPublished &&
+								report.status.toLowerCase() === 'candidate') ||
+							(isAccepted &&
+								report.status.toLowerCase() === 'accepted')
+						"
+						type="radio"
+						name="report"
+						[value]="report"
+						[checked]="
+							(isAccepted &&
+								report.status.toLowerCase() === 'accepted') ||
+							isReportSelected
+						"
+						(change)="getSelectedReport(report)"
+					/>
+				</td>
+				<td style="text-align: right; padding-right: 30px; width: 5%">
+					{{ report.reportVersion }}
+				</td>
+				<td style="width: 30%">{{ report.updatedTs }}</td>
+				<td style="text-transform: capitalize; width: 10%">
+					{{ report.status }}
+				</td>
+				<td *ngIf="isShowUrl" class="report-link" style="width: 30%">
+					<span style="display: block; position: relative">
+						<a
+							*ngIf="
+								this.role.toLowerCase() === 'regulator' ||
+								this.role.toLowerCase() === 'statagent' ||
+								!(
+									this.role.toLowerCase() === 'carrier' &&
+									(report.status.toLowerCase() ===
+										'accepted' ||
+										report.status.toLowerCase() ===
+											'candidate')
+								)
+							"
+							class="truncate-url"
+							href="javascript:void(0);"
+							(click)="openURL(report.url)"
+							[tooltip]="report.url"
+							>{{ report.url }}</a
+						>
+					</span>
+					<!-- <i class='glyphicon glyphicon-copy'></i> -->
+				</td>
+				<td style="width: 18%">
+					<span style="display: block; position: relative">
+						<span class="truncate-hash" [tooltip]="report.hash">{{
+							report.hash
+						}}</span>
+					</span>
+				</td>
+				<td style="width: 2%">
+					<div
+						id="i"
+						class="glyphicon glyphicon-option-vertical reset-btn"
+						(click)="toggleCopyBtn(i)"
+					>
+						<div
+							*ngIf="isCopyBtn && copyIndex === i"
+							class="reset-container"
+						>
+							<div class="copyLink">
+								<button
+									*ngIf="!isHashCopied"
+									ngxClipboard
+									[cbContent]="report.hash"
+									(click)="
+										copyToClipboard(
+											'Copied',
+											'hash',
+											$event
+										)
+									"
+								>
+									{{ copyHashText }}
+								</button>
+								<span *ngIf="isHashCopied"
+									><i
+										class="glyphicon glyphicon-ok-circle"
+										style="margin-right: 8px"
+									></i
+									>{{ copyHashText }}</span
+								>
+							</div>
+							<div class="copyLink">
+								<button
+									*ngIf="!isURLCopied"
+									ngxClipboard
+									[cbContent]="report.url"
+									(click)="
+										copyToClipboard('Copied', 'URL', $event)
+									"
+								>
+									{{ copyURLText }}
+								</button>
+								<span *ngIf="isURLCopied"
+									><i
+										class="glyphicon glyphicon-ok-circle"
+										style="margin-right: 8px"
+									></i
+									>{{ copyURLText }}</span
+								>
+							</div>
+						</div>
+					</div>
+				</td>
+			</tr>
+		</tbody>
+		<tbody *ngIf="!(reportList && reportList.length > 0)">
+			<tr>
+				<td colspan="6" style="text-align: center; font-weight: bold">
+					No reports available.
+				</td>
+			</tr>
+		</tbody>
+	</table>
+	<div
+		*ngIf="role === 'regulator' && isJurisdiction"
+		class="col-sm-12 no-row-padding"
+	>
+		<button
+			*ngIf="!isAccepted && !isPublished"
+			class="btn-primary pull-right"
+			type="button"
+			(click)="submitReport('acceptAndPublishReport')"
+			style="padding: 12px 20px"
+			[disabled]="isDisabled"
+		>
+			Accept and Publish
+		</button>
+		<button
+			*ngIf="isAccepted"
+			class="btn-primary pull-right"
+			type="button"
+			(click)="submitReport('publishReport')"
+			style="text-transform: capitalize; padding: 12px 20px"
+			[disabled]="!isAccepted"
+		>
+			Publish
+		</button>
+		<button
+			*ngIf="!isAccepted && !isPublished"
+			class="btn-secondary pull-right"
+			(click)="submitReport('acceptReport')"
+			style="text-transform: capitalize; padding: 12px 20px"
+			[disabled]="isDisabled"
+		>
+			Accept
+		</button>
+	</div>
 </div>
-<app-modal [title]='title' [message]='message' [type]='type' (modalClose)='modalClose()'></app-modal>
-<app-spinner *ngIf='isSpinner'></app-spinner>
+
+<app-spinner *ngIf="isSpinner"></app-spinner>
