--- a/openidl-ui/src/app/view-datacall-issued/view-datacall-issued.component.html
+++ b/openidl-ui/src/app/view-datacall-issued/view-datacall-issued.component.html
@@ -1,5 +1,16 @@
-<app-header [selected]='selected'></app-header>
-<div class="col-sm-10 col-sm-offset-1 no-row-padding">
-    <button class='back-link' (click)='goBack()' style='padding:0;'> &lt;&lt;&nbsp; Back to Data Calls</button>
+<app-header [selected]="selected"></app-header>
+<div class="container">
+	<h1 class="header-with-icon">
+		<mat-icon color="primary">note_add</mat-icon>
+		<span>Issued Data Call</span>
+	</h1>
+	<button mat-button color="primary" (click)="goBack()">
+		<mat-icon color="primary">arrow_back_ios</mat-icon>
+		Back to Data Calls
+	</button>
+	<app-datacalls-issued
+		(viewReportEvent)="viewReport()"
+		(viewDraftsEvent)="viewDrafts()"
+		(cloneDatacallEvent)="cloneDatacall()"
+	></app-datacalls-issued>
 </div>
-<app-datacalls-issued (viewReportEvent)='viewReport()' (viewDraftsEvent)='viewDrafts()' (cloneDatacallEvent)='cloneDatacall()'></app-datacalls-issued>
