--- a/openidl-common-ui/src/app/components/dialogs/dialog-date.component/dialog-date.component.html
+++ b/openidl-common-ui/src/app/components/dialogs/dialog-date.component/dialog-date.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>{{ data.title }}</h2>
+<app-base-dialog [title]="data.title" [type]="data.type"></app-base-dialog>
 <mat-dialog-content class="mat-typography">
 	<mat-form-field appearance="outline">
 		<mat-label>Delivery Date</mat-label>
