--- a/openidl-common-ui/src/app/components/datacalls-issued/datacalls-issued.component.scss
+++ b/openidl-common-ui/src/app/components/datacalls-issued/datacalls-issued.component.scss
@@ -6,7 +6,7 @@
 
 	.data-content {
 		overflow-y: auto;
-		height: 47rem;
+		height: 45rem;
 	}
 
 	.row {
@@ -37,9 +37,9 @@
 			font-weight: bold;
 		}
 
-		p {
-			padding-bottom: 1rem;
-		}
+		// p {
+		// 	padding-bottom: 1rem;
+		// }
 	}
 
 	.col:last-child {
