--- a/openidl-common-ui/src/app/components/dialogs/dialog-pattern.component/dialog-pattern.component.html
+++ b/openidl-common-ui/src/app/components/dialogs/dialog-pattern.component/dialog-pattern.component.html
@@ -62,6 +62,5 @@
 	</button>
 </mat-dialog-actions>
 <div class="info">
-	Please note that this file is for informational purposes only. This file
-	can't be used to run the data extraction.
+	{{ patternMessage }}
 </div>
