--- a/openidl-common-ui/src/app/components/report-table/report-table.component.scss
+++ b/openidl-common-ui/src/app/components/report-table/report-table.component.scss
@@ -1,3 +1,26 @@
+@import '../../../variables';
+
+.data-table {
+	.width-table {
+		width: 100%;
+	}
+
+	.mat-row:hover {
+		background-color: $table-hover;
+		cursor: pointer;
+	}
+
+	.row-status {
+		text-transform: capitalize;
+	}
+
+	.active {
+		color: $primary;
+		text-decoration: underline;
+		cursor: pointer;
+	}
+}
+
 .report-table {
 	.report-link {
 		color: #2d74da;
