--- a/openidl-common-ui/src/app/components/table/table.component.html
+++ b/openidl-common-ui/src/app/components/table/table.component.html
@@ -1,4 +1,4 @@
-<div class="mat-elevation-z0 data-table">
+<div class="data-table">
 	<table mat-table class="width-table" matSort [dataSource]="dataSource">
 		<!-- Name Column -->
 		<ng-container matColumnDef="name">
