--- a/openidl-ui/src/styles.scss
+++ b/openidl-ui/src/styles.scss
@@ -8,10 +8,6 @@ body {
 	background: #fafafa;
 }
 
-.center {
-	text-align: center;
-}
-
 .header-with-icon {
 	.mat-icon {
 		font-size: 2rem;
@@ -27,4 +23,41 @@ body {
 .container {
 	width: 80%;
 	margin: 0 auto;
+}
+
+.mat-dialog-container {
+	min-width: 600px;
+}
+
+.center {
+	text-align: center;
+}
+
+.right {
+	text-align: right;
+}
+
+.pb-1 {
+	padding-bottom: 1rem;
+}
+
+.full-width {
+	width: 100%;
+}
+
+.row {
+	display: flex;
+	flex-direction: row;
+}
+
+.col {
+	flex: 1;
+}
+
+.update-form {
+	margin: 1rem auto;
+	.data-form {
+		margin-top: 1rem;
+		padding: 1rem;
+	}
 }
